# rust_project

./: README.md
fizz_buzz/: fizz_buzz  fizz_buzz.rs
get_ip/: Cargo.toml
get_ip/src/: main.rs
guess_number/: .gitignore  Cargo.toml
guess_number/src/: main.rs
rock_paper_scissors/: Cargo.toml  main
rock_paper_scissors/src/: main  main.rs
rust-todo/: Cargo.toml
rust-todo/src/: app.rs  lib.rs
rust-todo/src/components/Button/: button.rs
rust-todo/src/components/Input/: input.rs
rust-todo/static/: index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
test/adder/src/: add.rs  guess.rs  lib.rs
test/rust-practice/src/: generics.rs  lifetime.rs  main.rs  ownership.rs  structs.rs
tictoctoe/: Cargo.toml
tictoctoe/src/: game.rs  main.rs  utils.rs
yew-app/: Cargo.toml  README.md
yew-app/src/: lib.rs
yew-app/static/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
