[package]
name = "rust-todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"

# Strum is a set of macros and traits for working with enums and strings easier in Rust.
strum = "0.19"
strum_macros = "0.19"

# serialization framework
serde = "1"
serde_derive = "1"
